fix: redo/undo correct rerendering of webview

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "category": "View"
       }
     ],
-    "menus": {
+    "//menus": {
       "editor/title": [
         {
           "command": "lengalab.setStructuredView",
