--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   ],
   "main": "./out/src/extension.js",
   "contributes": {
-    "languages" : [
+    "languages": [
       {
         "id": "lenga",
-        "aliases": ["Lenga"],
-        "extensions": [".c.lenga"] 
+        "aliases": [
+          "Lenga"
+        ],
+        "extensions": [
+          ".c.lenga"
+        ]
       }
     ],
     "customEditors": [
@@ -48,6 +52,19 @@
         "command": "lengalab.transpileFile",
         "title": "Transpile File",
         "category": "Transpilation"
+      },
+      {
+        "command": "lengalab.toggleDebug",
+        "title": "Toggle Debug Info",
+        "category": "Lengalab"
+      }
+    ],
+    "keybindings": [
+      {
+        "command": "lengalab.toggleDebug",
+        "key": "ctrl+shift+d",
+        "mac": "cmd+shift+d",
+        "when": "activeCustomEditorId == lengalab.c"
       }
     ],
     "menus": {
@@ -63,9 +80,11 @@
           "command": "lengalab.transpileFile",
           "when": "resourceLangId == c || resourceLangId == lenga",
           "group": "navigation",
-          "args": ["${file}"]
+          "args": [
+            "${file}"
+          ]
         }
-      ]      
+      ]
     }
   },
   "scripts": {
@@ -81,7 +100,9 @@
     "test": "vscode-test"
   },
   "devDependencies": {
+    "@bufbuild/protobuf": "2.6.3",
     "@types/google-protobuf": "^3.15.12",
+    "@types/lodash": "^4.17.20",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@types/vscode": "^1.101.0",
@@ -89,7 +110,6 @@
     "@typescript-eslint/parser": "^8.31.1",
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.5.2",
-    "@bufbuild/protobuf": "2.6.3",
     "eslint": "^9.25.1",
     "grpc_tools_node_protoc_ts": "^5.3.3",
     "grpc-tools": "^1.13.0",
@@ -99,6 +119,7 @@
     "@grpc/grpc-js": "^1.13.4",
     "@grpc/proto-loader": "^0.8.0",
     "google-protobuf": "^3.21.4",
+    "lodash": "^4.17.21",
     "protobufjs": "^7.5.4",
     "ts-proto": "^2.7.7",
     "ts-protoc-gen": "^0.15.0"
