--- a/.github/workflows/verify_bindings.yml
+++ b/.github/workflows/verify_bindings.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Ensure BRANCH_OR_COMMIT is main
         run: |
           SCRIPT_FILE="rpc/generate.sh"
-          if ! grep -q '^BRANCH_OR_COMMIT="main"$' "$SCRIPT_FILE"; then
+          if ! grep -q '^BRANCH_OR_COMMIT="main"' "$SCRIPT_FILE"; then
             echo "Error: BRANCH_OR_COMMIT is not set to 'main' in $SCRIPT_FILE"
             exit 1
           fi
