fix: missing nix on actions

--- a/.github/workflows/verify_bindings.yml
+++ b/.github/workflows/verify_bindings.yml
@@ -12,7 +12,11 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v5
+      - name: Install Nix
+        uses: cachix/install-nix-action@@v31.8.1
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
 
       - name: Ensure BRANCH_OR_COMMIT is main
         run: |
