feat: add transpile command as button in c / c.lenga files

--- a/package.json
+++ b/package.json
@@ -94,6 +94,11 @@
           "command": "lengalab.setGraphView",
           "when": "activeCustomEditorId == lengalab.c",
           "group": "navigation"
+        },
+        {
+          "command": "lengalab.transpileFile",
+          "when": "resourceLangId == c || resourceLangId == lenga",
+          "group": "navigation"
         }
       ],
       "explorer/context": [
