--- a/package.json
+++ b/package.json
@@ -126,7 +126,10 @@
     "lint:check": "eslint src webview-ui/src --ext .ts,.tsx",
     "format": "prettier --write \"src/**/*.ts\" \"webview-ui/src/**/*.{ts,tsx}\" \"*.{js,mjs,json}\"",
     "format:check": "prettier --check \"src/**/*.ts\" \"webview-ui/src/**/*.{ts,tsx}\" \"*.{js,mjs,json}\"",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "package": "vsce package",
+    "publish": "vsce publish",
+    "vsce": "vsce"
   },
   "devDependencies": {
     "@bufbuild/protobuf": "2.6.3",
@@ -150,6 +153,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.13.4",
     "@grpc/proto-loader": "^0.8.0",
+    "@vscode/vsce": "^3.6.2",
     "google-protobuf": "^3.21.4",
     "lodash": "^4.17.21",
     "protobufjs": "^7.5.4",
