--- a/.github/workflows/verify_bindings.yml
+++ b/.github/workflows/verify_bindings.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
       - name: Install Nix
-        uses: cachix/install-nix-action@@v31.8.1
+        uses: cachix/install-nix-action@v31.8.1
         with:
           nix_path: nixpkgs=channel:nixos-unstable
 
